--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,19 +37,21 @@ jobs:
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # 5️⃣ Deploy to EKS
-      - name: Deploy to EKS
+            - name: Deploy to EKS
         run: |
-          # Update kubeconfig
-          aws eks update-kubeconfig --region us-east-1 --name New-EKS-Cluster-cluster
+          # 1️⃣ Update kubeconfig and ensure IAM auth works
+          aws eks update-kubeconfig \
+            --region us-east-1 \
+            --name New-EKS-Cluster-cluster \
+            --alias github-actions
 
-          # Debug: check cluster access
+          # 2️⃣ Debug cluster connection
           kubectl config current-context
-          kubectl get nodes
+          kubectl get nodes || echo "Failed to get nodes, check cluster name and IAM permissions"
 
-          # Apply deployment and service
+          # 3️⃣ Apply deployment & service
           kubectl apply -f deployment.yaml --validate=false
           kubectl apply -f service.yaml --validate=false
 
-          # Wait for deployment rollout
+          # 4️⃣ Wait for rollout
           kubectl rollout status deployment/my-new-project-deployment
