--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      # 3️⃣ Login to Amazon ECR
+      # 3️⃣ Login to ECR
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
@@ -40,15 +40,12 @@ jobs:
       # 5️⃣ Deploy to EKS
       - name: Deploy to EKS
         run: |
-          # Update kubeconfig and ensure IAM auth works
-          aws eks update-kubeconfig \
-            --region us-east-1 \
-            --name New-EKS-Cluster-cluster \
-            --alias github-actions
+          # Update kubeconfig for GitHub runner
+          aws eks update-kubeconfig --region us-east-1 --name New-EKS-Cluster-cluster
 
-          # Debug cluster connection
+          # Debug cluster access
           kubectl config current-context
-          kubectl get nodes || echo "Failed to get nodes, check cluster name and IAM permissions"
+          kubectl get nodes
 
           # Apply deployment & service
           kubectl apply -f deployment.yaml --validate=false
